create LogWriter static object and rename 'value' to 'amount'